plugins {
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'application'
    id 'java'
}

group = 'org.chxei'
version = '0.0.1'

java {
    compileJava {
        options.fork = true
        options.incremental = true
    }
    sourceCompatibility = '21'
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        //vendor = JvmVendorSpec.GRAAL_VM
    }
}
configurations {
    configureEach {
        resolutionStrategy {
            cacheDynamicVersionsFor 24, 'hours'
            cacheChangingModulesFor 24, 'hours'
        }
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
//    implementation.exclude module: "spring-boot-starter-tomcat" //remove to use tomcat instead of undertow
}

repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.boot:spring-boot-starter-undertow' //remove to use tomcat instead of undertow
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:latest.release'
    implementation 'org.springdoc:springdoc-openapi-starter-common:latest.release'
    implementation 'org.apache.httpcomponents:httpcore:+'
    implementation 'org.apache.httpcomponents:httpclient:+' exclude group: 'commons-logging', module: 'commons-logging'
    implementation 'io.github.cdimascio:dotenv-kotlin:+'
    implementation 'com.google.guava:guava:+'
    implementation 'org.apache.commons:commons-lang3:+'
    implementation 'com.tinify:tinify:latest.release'
    implementation 'org.xerial:sqlite-jdbc:+'
    implementation 'org.hibernate.orm:hibernate-community-dialects:+'

    /*implementation 'joda-time:joda-time-hibernate:+'*/ //todo not implemented
    /*implementation 'joda-time:joda-time:+'*/ //todo not implemented
    compileOnly 'org.projectlombok:lombok'
//    compileOnly 'io.jsonwebtoken:jjwt-api:+'
    developmentOnly 'org.springframework.boot:spring-boot-devtools' //not compatible with native
//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:+'
//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:+'
    annotationProcessor 'org.projectlombok:lombok:+'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

test {
    useJUnitPlatform()
}

tasks.register('publish') {
    publish.dependsOn(bootJar)
    publish.doFirst {
        project.mkdir ".github/build"
    }
    publish.doLast {
        file("./build/libs/shmessenger-" + version + ".jar").renameTo(file("./.github/build/shmessenger.jar"))
        delete("./build")
    }
}
